# net

./: .gitignore  .npmrc  CMakeLists.txt  LICENSE  biome.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
lib/: index.d.ts  index.js  index.mjs  index.ts
scripts/: create-platform-package.js  set-version.js  strip-optional-deps.js  update-optional-deps.js
src/: connection.cpp  connection.h  event_emitter.cpp  event_emitter.h  main.cpp  packet_registry.cpp  packet_registry.h  server.cpp  server.h  thread_pool.cpp  thread_pool.h
tests/: test.js
